--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adote um Pet</title>
+    <link rel="stylesheet" href="style.css"
 </head>
 <body>
-    <header>
-        <h1>ADOTE UM PET</h1>
+    <header class="cabeçalho">
+        <img class="cabeçalho-imagem" src="caminho da imagem aqui"
+        <h1 class="cabeçalho-titulo">ADOTE UM PET</h1>
           <h2>cadastro de pets</h2>
+         <ul class="cabeçalho-lista"> 
+            <li> pagina principal</li>
+            <li>quem somos</li>
+         </ul> 
     </header>
 </body>
 </html>
